--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1170px;
   margin: 0 auto;
 }
 
@@ -93,6 +93,7 @@ a {
 }
 
 .project-card .project-card-content h2 {
+  font-size: 1.4rem;
   font-weight: 700;
   margin-top: 0.5rem;
 }
